--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.0",
+    "@codemirror/view": "^6.13.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/golos-text": "^5.0.3",
     "@fontsource/plus-jakarta-sans": "^5.0.3",
     "@fontsource/urbanist": "^5.0.3",
+    "@hcorta/react-to-image": "^1.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@uiw/codemirror-extensions-langs": "^4.21.3",
+    "@uiw/codemirror-theme-dracula": "^4.21.3",
+    "@uiw/react-codemirror": "^4.21.3",
     "appwrite": "^11.0.0",
     "emoji-mart": "^5.5.2",
     "framer-motion": "^10.12.16",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "recoil": "^0.7.7"
   },
